Fix the alignment and margins of the texts

--- a/web/src/mwahahavote/static/css/main.css
+++ b/web/src/mwahahavote/static/css/main.css
@@ -24,35 +24,45 @@ h2 {
 }
 
 #prompt {
-    border-radius: 5px;
-    border: 1px solid #e1e8ed;
-    display: flex;
-    margin: auto;
-    max-width: 500px;
-    min-height: 50px;
-    padding: 20px;
-}
-
-#prompt-text {
-    color: #1c2022;
-    cursor: text;
-    font-family: Helvetica, Roboto, "Segoe UI", Calibri, sans-serif;
-    font-size: 18px;
-    line-height: 1.4;
-    margin: auto;
-    white-space: pre-wrap;
-    width: 100%;
-    word-wrap: break-word;
-}
-
-.output {
+  align-items: center;
   border-radius: 5px;
   border: 1px solid #e1e8ed;
   display: flex;
+  flex-wrap: wrap;
+  margin: 30px auto 0 auto;
+  max-width: 500px;
+  min-height: 50px;
+  padding: 20px;
+  vertical-align: middle;
+}
+
+#prompt-text {
+  color: #1c2022;
+  cursor: text;
+  font-family: Helvetica, Roboto, "Segoe UI", Calibri, sans-serif;
+  font-size: 18px;
+  line-height: 1.4;
+  margin: auto;
+  white-space: pre-wrap;
+  width: 100%;
+  word-wrap: break-word;
+}
+
+#outputs {
+  align-items: center;
+}
+
+.output {
+  align-items: center;
+  border-radius: 5px;
+  border: 1px solid #e1e8ed;
+  display: flex;
+  flex-wrap: wrap;
   margin: 30px auto;
   max-width: 500px;
   min-height: 150px;
   padding: 20px;
+  vertical-align: middle;
 }
 
 .output-text {
